--- a/courses/templates/registration/password_reset_complete.html
+++ b/courses/templates/registration/password_reset_complete.html
@@ -13,7 +13,7 @@
                         <div class="woocommerce-notices-wrapper"></div>
 
                         <div class="content">
-                            <p>{% trans 'Your password has been set.' %}
+                            <p>{% trans 'Your password has been updated.' %}
                             </p>
 
                             <p>{% trans 'You can ' %}
