--- a/app_business/templates/business_base.html
+++ b/app_business/templates/business_base.html
@@ -1,27 +1,298 @@
 {% load staticfiles %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
-<head time="{% now 'jS F Y H:i:s' %}">
-   <meta charset="utf-8" />
-   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-   <meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="description" content="{% block meta_desc %}
+      {% endblock %}" />
+  <meta name="author" content="{% block meta_author %}
+      {% endblock %}" />
+  <meta name="keywords" content="{% block meta_keywords %}
+      {% endblock %}" />
+  <meta name="robots" content="noindex" />
 
-  
-   <title>{% block title %} Safety Training and Certification | pdhsafety.com {% endblock %}</title>
+  <title>
+    {% block title %}
 
+    {% endblock %}| pdhsafety.com
+  </title>
 
-   {% block head %}{% endblock %}
+  <link rel="icon" type="image/png" href="{% static 'edutim/images/logo5.png' %}" />
+
+  <link rel="canonical" href="https://pdhsafety.com{{ request.path }}" />
+
+  <link rel="stylesheet" href="{% static 'edutim/combine.css' %}" />
+
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Muli&family=Poppins:wght@400;600;700&family=Quicksand:wght@500;600;700&display=swa" />
 </head>
 
-<body>
+<body id="top-header">
+  <header style="background: #263b5e;">
+    <!-- Main Menu Start -->
+    <div class="site-navigation main_menu nav-tp mb-2" id="mainmenu-area">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container">
+          <a class="navbar-brand" href="/"><img src="{% static 'edutim/images/logo100.png' %}" width="55" height="55"
+              alt="Construction Safety Training" class="img-fluid" /></a>
 
-   {% block content %}{% endblock %}
+          <!-- Toggler -->
 
-   
-   {% block scripts %}{% endblock %}
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu"
+            aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation"><span
+              class="fa fa-bars"></span></button>
+
+          <!-- Collapse -->
+          <div class="collapse navbar-collapse" id="navbarMenu">
+            <ul class="navbar-nav mx-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'business_dashboard' %}">Dashboard (BETA)</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'business_employees' %}">Employees</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'business_my_courses' %}">Purchased Courses</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'business_buy_courses' %}">Buy Courses</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'business_my_cart' %}">My Cart</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}?v={% now 'M-d-Y-H-i-s' %}">Logout</a>
+              </li>
+            </ul>
+          </div>
+          <!-- / .navbar-collapse -->
+        </div>
+        <!-- / .container -->
+      </nav>
+    </div>
+  </header>
+
+
+
+  {% block content %}
+  {% endblock %}
+
+  <div class="bg-light">
+    <p class="text-center text-info">This is a beta version of our website. Your feedback will help us to improve this new
+      version. Please let us know if you encounter any issues.</p>
+  </div>
+
+  <section class="footer pt-120">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 mr-auto col-sm-6 col-md-6">
+          <div class="widget footer-widget mb-5 mb-lg-0">
+            <h5 class="widget-title">About Us</h5>
+            <p class="mt-3">Construction Safety Training School aims to offer quality training that is relevant and
+              useful for the construction industry and other labor industries. These efforts include offering training
+              courses that are useful and/or necessary to achieve success and career outcomes in the construction
+              workforce and other industries where course material may be useful and applicable, annual reviews of
+              training materials for accuracy and relevance, and development of quality staff and instructors..</p>
+            <ul class="list-inline footer-socials">
+              <li class="list-inline-item">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#"><i class="fab fa-twitter"></i></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#"><i class="fab fa-pinterest"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-lg-2 col-sm-6 col-md-6">
+          <div class="footer-widget mb-5 mb-lg-0">
+            <h5 class="widget-title">Company</h5>
+            <ul class="list-unstyled footer-links">
+              <li>
+                <a href="/about/">About us</a>
+              </li>
+              <li>
+                <a href="/contact/">Contact us</a>
+              </li>
+              <li>
+                <a href="/sst-verify/">Training Verification</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-2 col-sm-6 col-md-6">
+          <div class="footer-widget mb-5 mb-lg-0">
+            <h5 class="widget-title">Legal</h5>
+            <ul class="list-unstyled footer-links">
+              <li>
+                <a href="/legal/">Legal</a>
+              </li>
+              <li>
+                <a href="/student-manual/">Student Manual</a>
+              </li>
+              <li>
+                <a href="/faq/">FAQs</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 col-md-6">
+          <div class="footer-widget footer-contact mb-5 mb-lg-0">
+            <h5 class="widget-title">Contact</h5>
+
+            <ul class="list-unstyled">
+              <li>
+                <i class="fa fa-phone"></i>
+                <div>
+                  <strong>Phone number</strong>
+                  +914-473-6791
+                </div>
+              </li>
+              <li>
+                <i class="far fa-envelope"></i>
+                <div>
+                  <strong>Email Address</strong>
+                  mail@pdhsafety.com
+                </div>
+              </li>
+              <li>
+                <i class="fas fa-location-arrow"></i>
+                <div>
+                  <strong>Office Address</strong>
+                  189 Valentine Ln Yonkers, New York 10705
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-btm">
+      <div class="container">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-lg-6">
+            <div class="footer-logo">
+              <img src="{% static 'edutim/images/logo100.png' %}" width="55" height="55" alt="" class="img-fluid" />
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="copyright text-lg-center">
+              <p>Copyright © 2021 All rights reserved | Construction Safety Training, LLC</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div class="fixed-btm-top">
+    <a href="#top-header" class="js-scroll-trigger scroll-to-top"><i class="fa fa-angle-up"></i></a>
+  </div>
+
+  <link rel="stylesheet" media="print" onload="this.media='all'; this.onload = null"
+    href="{% static 'edutim/vendors/fontawesome/css/all.min.css' %}" />
+
+  <link rel="stylesheet" media="print" onload="this.media='all'; this.onload = null"
+    href="{% static 'edutim/vendors/summernote/summernote.min.css' %}" />
+
+  <link rel="stylesheet" media="print" onload="this.media='all'; this.onload = null"
+    href="{% static 'edutim/vendors/summernote/summernote-bs4.min.css' %}" />
+
+  <link rel="stylesheet" media="print" onload="this.media='all'; this.onload = null"
+    href="{% static '/sb-admin/vendor/datatables/dataTables.bootstrap4.min.css' %}" />
+
+  <style>
+    @media (max-width: 991px) {
+      .navbar-toggler-icon {
+        line-height: 1.6em;
+        position: relative;
+        right: 0px;
+      }
+    }
+  </style>
+
+  <script src="{% static 'edutim/combine.js' %}"></script>
+
+  <script>
+    Handlebars.registerHelper('dateOnly', function (options) {
+      var data = options.fn(this)
+
+      try {
+        var date = moment($.trim(data)).format('MMMM, DD, YYYY')
+        return new Handlebars.SafeString(date)
+      } catch (e) {}
+
+      return options.fn(this)
+    });
+
+    Handlebars.registerHelper('ifCond', function (v1, operator, v2, options) {
+
+      switch (operator) {
+        case '==':
+          return (v1 == v2) ? options.fn(this) : options.inverse(this);
+        case '===':
+          return (v1 === v2) ? options.fn(this) : options.inverse(this);
+        case '!=':
+          return (v1 != v2) ? options.fn(this) : options.inverse(this);
+        case '!==':
+          return (v1 !== v2) ? options.fn(this) : options.inverse(this);
+        case '<':
+          return (v1 < v2) ? options.fn(this) : options.inverse(this);
+        case '<=':
+          return (v1 <= v2) ? options.fn(this) : options.inverse(this);
+        case '>':
+          return (v1 > v2) ? options.fn(this) : options.inverse(this);
+        case '>=':
+          return (v1 >= v2) ? options.fn(this) : options.inverse(this);
+        case '&&':
+          return (v1 && v2) ? options.fn(this) : options.inverse(this);
+        case '||':
+          return (v1 || v2) ? options.fn(this) : options.inverse(this);
+        default:
+          return options.inverse(this);
+      }
+    });
+
+    (function ($) {
+      $.fn.serializeObject = function () {
+        var o = {}
+        var a = this.serializeArray()
+
+        $.each(a, function () {
+          if (o[this.name] !== undefined) {
+            if (!o[this.name].push) {
+              o[this.name] = [o[this.name]]
+            }
+
+            o[this.name].push(this.value || '')
+          } else {
+            o[this.name] = this.value || ''
+          }
+        })
+
+        return o
+      }
+    })(jQuery);
+
+    $(document).ready(function () {});
+  </script>
+
+  {% block scripts %}
+  {% endblock %}
 </body>
 
 </html>
