--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -58,9 +58,9 @@
         {% if not object.is_free %}
         <div class="d-block d-sm-block d-md-none"
             style="position: fixed;top:0px;z-index: 111;width: 100%;background: rgb(67, 67, 67);">
-            <div class="course-price-wrapper p-1 px-4">
+            <div class="course-price-wrapper p-2">
                 <div class="row">
-                    <div class="col-8">
+                    <div class="col-12 mb-2">
                         <div class="course-price mb-0 mt-1">
 
                             {% if object.is_free %}
@@ -84,30 +84,48 @@
 
                         </div>
                     </div>
-                    <div class="col-4">
-                        <div class="buy-btn text-right">
+                    <div class="col-12">
+
+                        {% if request.user.is_authenticated and request.user.is_business == True %}
+                        <div class="buy-btn text-left">
+                            <a title="Dashboard" href="javascript:;"
+                                class=" mt-0 btn btn-sm btn-main-2 link-enroll-business">
+                                Enroll (Dashboard)
+                            </a>
+                        </div>
+                        {% else %}
+                        <div class="buy-btn">
                             {% if object.is_free %}
+
                             {% if request.user.is_authenticated %}
-                            <a title="Take Free Course" href="javascript:;" class="btn btn-main-2 btn-block link-free-enroll">
+
+                            <a title="Take Free Course" href="javascript:;"
+                                class="btn btn-main-2 btn-block link-free-enroll">
                                 Take Free Course
                             </a>
                             {% else %}
-                            <a title="Enroll Free Course" href="javascript:;" class="btn btn-main-2 btn-block link-free-auth">
+                            <a title="Enroll Free Course" href="javascript:;"
+                                class="btn btn-main-2 btn-block link-free-auth">
                                 Enroll Free Course
                             </a>
                             {% endif %}
 
                             {% else %}
 
-                            <a title="Add To Cart" href="javascript:;" class=" mt-0 btn btn-sm btn-main-2 btn-block link-add-cart"
-                                data-subject="{{ subject.title }}"  data-subject-slug="{{ subject.slug }}" data-json="{{ object|jsonify }}">
+                            <a title="Add To Cart" href="javascript:;"
+                                class=" mt-0 btn btn-sm btn-main-2 link-add-cart"
+                                data-subject="{{ subject.title }}" data-subject-slug="{{ subject.slug }}"
+                                data-json="{{ object|jsonify }}">
                                 Add To Cart
                             </a>
 
                             {% endif %}
 
                         </div>
+                        {% endif %}
+
                     </div>
+                    <!--  end .col-4 -->
                 </div>
             </div>
         </div>
@@ -290,25 +308,37 @@
 
                             </div>
                             <div class="buy-btn">
-                                {% if object.is_free %}
-                                {% if request.user.is_authenticated %}
-                                <a href="javascript:;" class="btn btn-main-2 btn-block link-free-enroll">
-                                    Take Free Course
+
+                                {% if request.user.is_authenticated and request.user.is_business == True %}
+                                <a href="javascript:;" class="btn btn-main-2 btn-block link-enroll-business">
+                                   Enroll (Dashboard)
                                 </a>
                                 {% else %}
-                                <a href="javascript:;" class="btn btn-main-2 btn-block link-free-auth">
-                                    Enroll Free Course
-                                </a>
+
+                                <div>
+                                    {% if object.is_free %}
+                                    {% if request.user.is_authenticated %}
+                                    <a href="javascript:;" class="btn btn-main-2 btn-block link-free-enroll">
+                                        Take Free Course
+                                    </a>
+                                    {% else %}
+                                    <a href="javascript:;" class="btn btn-main-2 btn-block link-free-auth">
+                                        Enroll Free Course
+                                    </a>
+                                    {% endif %}
+
+                                    {% else %}
+
+                                    <a href="javascript:;" data-subject="{{ subject.title }}"
+                                        data-json="{{ object|jsonify }}" data-subject-slug="{{ subject.slug }}"
+                                        class="btn btn-main-2 btn-block link-add-cart">
+                                        Add To Cart
+                                    </a>
+
+                                    {% endif %}
+                                </div>
                                 {% endif %}
 
-                                {% else %}
-
-                                <a href="javascript:;" data-subject="{{ subject.title }}"
-                                    data-json="{{ object|jsonify }}"  data-subject-slug="{{ subject.slug }}" class="btn btn-main-2 btn-block link-add-cart">
-                                    Add To Cart
-                                </a>
-
-                                {% endif %}
                                 <div class="font-weight-bold mt-2">
                                     You will be awarded a certificate instantly.
                                 </div>
