--- a/app_business/templates/business_public/register_business_user.html
+++ b/app_business/templates/business_public/register_business_user.html
@@ -100,6 +100,9 @@
             </div>
             <div class="row">
               <div class="col-md-12">
+                <p>
+                  <a title="Business Account Features & Demo" href="{% url 'business_account_features' %}"> View Features & Demo!</a>
+                 </p>
                 <p>Is it time to train your employees? Sign up for a pdhsafety.com business account today! We offer a powerful Learning Management System (LMS) and special discounts for bulk purchases.</p>
 
                 <p>From small groups to large teams, NYC Construction Safety Training (PdhSafety.com) simplifies safety compliance. Easily assign courses, track progress, and verify completions for a safer, more productive jobsite.</p>
