--- a/app_students/templates/courses/detail.html
+++ b/app_students/templates/courses/detail.html
@@ -1043,6 +1043,7 @@
                         is_completed: true,
                         content_type: content_type,
                         user_ip: "{{user_ip}}",
+                        enrollment:'{{enrollment.id}}'
                     };
 
                     if (content_type != "video" || $("#videoFrame").length > 0) {
