--- a/app_students/templates/courses/detail.html
+++ b/app_students/templates/courses/detail.html
@@ -1028,6 +1028,9 @@
             };
 
             var checkContentCompleted = function () {
+
+                if('{{enrollment.is_completed}}' == 'True') return;
+                
                 if ($("#contentSection").length > 0) {
 
                     var id = $("#contentSection").attr("data-id");
