--- a/app_business/templates/business_home/index.html
+++ b/app_business/templates/business_home/index.html
@@ -14,6 +14,10 @@
             <h3>Business Dashboard (BETA Version)</h3>
           </div>
 
+          <p>
+            <a target="_blank" title="Business Account Features & Demo" href="{% url 'business_account_features' %}"> View Features & Demo!</a>
+           </p>
+
           <div class="card">
             <div class="card-body bg-info">
               <p class="text-white">We're excited to share our beta with you! Your feedback will help us improve this new version. Please let us know if you encounter any issues.</p>
