--- a/app_students/templates/courses/detail.html
+++ b/app_students/templates/courses/detail.html
@@ -1,6 +1,6 @@
 {% extends 'student_base.html' %} {% load i18n %} {% load staticfiles %} {% block title %}
 {{ object.title }}
-{% endblock %} 
+{% endblock %}
 
 {% block content %}
 <nav id="topNavbar" class="navbar navbar-expand-lg navbar-light bg-light">
@@ -101,15 +101,15 @@
     </div>
     {% comment %} {% for m in course_tree %}
     <p class="d-none1 content-tree-item" data-complete="{{m.complete}}" data-type="{{m.type}}">
-        
+
         {{ forloop.counter0 }} {{ m.object }}
         {{m.object.id}}
         {{ m.type }} {{ m.complete }}</p>
-    {% endfor %}  {% endcomment %}
+    {% endfor %} {% endcomment %}
     <div class="row">
         <div class="col-md-8">
             <div class="blog-post-item">
-                <div class="row"> 
+                <div class="row">
                     {% if module == None %}
                     {% if request.GET.type == 'quiz' and object.quiz is not None %}
                     <div class="col-md-12 mb-30">
@@ -154,9 +154,9 @@
                         </div>
                     </div>
                     {% endif %}
-                    {% endif %} 
+                    {% endif %}
                     <!--  end if module == None -->
-                    
+
                     {% if module != None %}
 
                     {% for content in module.contents.all %}
@@ -169,8 +169,9 @@
                         {% endwith %}
                     </div>
                     {% endif %}
-                    {% endfor %}  <!--  end for content in module.contents.all -->
-                    
+                    {% endfor %}
+                    <!--  end for content in module.contents.all -->
+
                     {% if active_content.type == 'quiz' %}
                     <div class="col-md-12">
                         <table class="table">
@@ -209,14 +210,15 @@
                     </div>
                     {% endif %}
 
-                    {% endif %} <!--  if module != None -->
+                    {% endif %}
+                    <!--  if module != None -->
                 </div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="blog-sidebar">
                 <div class="widget widget_categories">
-                  
+
                     <ul>
                         {% for m in object.modules.all %}
                         <li class="cat-item">
@@ -225,7 +227,8 @@
                                     <a href="javascript:;" class="accordion-button d-flex" data-toggle="collapse"
                                         data-target="#collapseOne-{{ m.id }}"
                                         aria-expanded="{% if m == module %}true{% endif %}">
-                                        <i class="fa {% if m == module %}fa-angle-down{% else %}fa-angle-right{% endif %}">
+                                        <i
+                                            class="fa {% if m == module %}fa-angle-down{% else %}fa-angle-right{% endif %}">
                                         </i>
                                         <span>{{ m.title|lower }}</span>
                                     </a>
@@ -248,7 +251,8 @@
                                                 <span>{{ item.title|lower }}</span>
                                             </a>
                                             {% else %}
-                                            <a class="d-flex" href="{% url 'student_course_detail_module' object.id m.id %}?content={{ content.id }}">
+                                            <a class="d-flex"
+                                                href="{% url 'student_course_detail_module' object.id m.id %}?content={{ content.id }}">
                                                 <i title=" {{ content.content_type }}"
                                                     class="fa {{ content.content_type }}"></i>
                                                 <span>{{ item.title|lower }}</span>
@@ -256,8 +260,9 @@
                                             {% endif %}
                                         </li>
                                         {% endwith %}
-                                        {% endfor %}  <!-- for content in m.contents.all -->
-                                        
+                                        {% endfor %}
+                                        <!-- for content in m.contents.all -->
+
                                         {% if m.quiz != None and m.quiz_id in taken_quizzes and m.quiz.questions.count > 0 %}
                                         <li u-id="{{ m.quiz_id }}{{ m.id }}"
                                             class="content-item py-1 pl-2 complete {% if active_content.object.id == m.quiz_id and active_content.module.id == m.id %}active{% endif %}"
@@ -270,19 +275,22 @@
                                         </li>
                                         {% elif m.quiz != None and m.quiz.questions.count > 0 %}
                                         <li class="content-item py-1 pl-2" data-progress="True">
-                                            <a href="{% url 'student_course_detail_module' object.id m.id %}?content={{ m.quiz_id }}&type=quiz">
+                                            <a
+                                                href="{% url 'student_course_detail_module' object.id m.id %}?content={{ m.quiz_id }}&type=quiz">
                                                 <i title="Quiz" class="fa fa-question"></i>
                                                 Take Quiz
                                             </a>
                                         </li>
-                                        {% endif %} <!-- f m.quiz != None and m.quiz_id in taken_quizzes and
+                                        {% endif %}
+                                        <!-- f m.quiz != None and m.quiz_id in taken_quizzes and
                                             m.quiz.questions.count > 0 -->
                                     </ul>
                                 </div>
                             </div>
                         </li>
-                        {% endfor %}  <!-- for m in object.modules.all -->
-                        
+                        {% endfor %}
+                        <!-- for m in object.modules.all -->
+
                         {% if object.quiz and object.quiz.id in taken_quizzes %}
                         <li class="cat-item {% if not enrollment.is_completed %} d-none {% endif %}">
                             <a href="{% url 'student_course_detail' object.id %}?content={{ object.quiz.id }}&type=quiz"
@@ -295,7 +303,8 @@
                                 class="btn btn-block btn-info text-white text-center link-final-quiz">Take Final
                                 Quiz</a>
                         </li>
-                        {% endif %} <!-- if object.quiz and object.quiz.id in taken_quizzes -->
+                        {% endif %}
+                        <!-- if object.quiz and object.quiz.id in taken_quizzes -->
                     </ul>
                 </div>
             </div>
@@ -649,7 +658,7 @@
 
 {% verbatim %}
 <script type="text/x-handlebars-template" id="msgRcvItemTemplate">
-   <div class="incoming_msg msg-item" data-id="{{id}}">
+    <div class="incoming_msg msg-item" data-id="{{id}}">
       <div class="incoming_msg_img">
          <img src="{{sent.image}}" class="img-fluid" alt="{{sent.first_name}}" /></div>
       <div class="received_msg">
@@ -665,7 +674,7 @@
 </script>
 
 <script type="text/x-handlebars-template" id="msgSentItemTemplate">
-   <div class="outgoing_msg msg-item" data-id="{{id}}">
+    <div class="outgoing_msg msg-item" data-id="{{id}}">
       <div class="sent_msg">
          <p>{{content}}</p>
          <span class="time_date">
@@ -892,31 +901,33 @@
                     e.stopPropagation();
 
                     var lessonsCount = $(".content-item").length
-                    if(lessonsCount<=0) return;
+                    if (lessonsCount <= 0) return;
 
-                    if(!$(".content-item").eq(0).hasClass('complete')) {
+                    if (!$(".content-item").eq(0).hasClass('complete')) {
                         $(".content-item.active a").eq(0)[0].click();
                         return;
                     }
 
-                    for(var iCounter=0;iCounter<lessonsCount;iCounter++) {
+                    for (var iCounter = 0; iCounter < lessonsCount; iCounter++) {
                         var lessonItem = $(".content-item").eq(iCounter);
 
-                        if(!lessonItem.hasClass('complete')) {
-                            var prevItem = $(".content-item").eq(iCounter-1);
-                            if(prevItem.hasClass('complete')) {
-                                prevItem.find("a.lesson")[0].click();
+                        if (!lessonItem.hasClass('complete')) {
+                            var prevItem = $(".content-item").eq(iCounter - 1);
+                            if (prevItem.hasClass('complete')) {
+                                if (prevItem.find("a.lesson").length > 0)
+                                    prevItem.find("a.lesson")[0].click();
+                                else if (prevItem.find("a.complete").length > 0)
+                                    prevItem.find("a.complete")[0].click();
                                 break;
                             }
                         }
-                       
+
                     }
 
                 });
 
                 if ($("#topNavbar").length > 0) {
-                    $("html, body").animate(
-                        {
+                    $("html, body").animate({
                             scrollTop: $("#topNavbar").offset().top,
                         },
                         500
@@ -957,8 +968,7 @@
 
             var getTimeLog = function () {
                 $.get(
-                    "/api/courses_time_logs/",
-                    {
+                    "/api/courses_time_logs/", {
                         course: "{{ object.id }}",
                     },
                     function (response) {
@@ -990,7 +1000,7 @@
                     success: function (response) {
                         $("#timer h3").removeAttr("style");
                     },
-                    failure: function (errMsg) { },
+                    failure: function (errMsg) {},
                 });
             };
 
@@ -1002,7 +1012,7 @@
                         lastSavedTime = lastSavedTime + 1;
 
                         if (lastSavedTime >= 55) {
-                           // saveTimeLog();
+                            // saveTimeLog();
                             lastSavedTime = 0;
                         }
 
@@ -1029,8 +1039,8 @@
 
             var checkContentCompleted = function () {
 
-                if('{{enrollment.is_completed}}' == 'True') return;
-                
+                if ('{{enrollment.is_completed}}' == 'True') return;
+
                 if ($("#contentSection").length > 0) {
 
                     var id = $("#contentSection").attr("data-id");
@@ -1046,7 +1056,7 @@
                         is_completed: true,
                         content_type: content_type,
                         user_ip: "{{user_ip}}",
-                        enrollment:'{{enrollment.id}}'
+                        enrollment: '{{enrollment.id}}'
                     };
 
                     if (content_type != "video" || $("#videoFrame").length > 0) {
@@ -1071,11 +1081,12 @@
                             $(".content-" + data.content)
                                 .parent()
                                 .addClass("complete");
-                            $("#contentSection[data-id='" + data.content + "']").attr("data-completed", "True");
+                            $("#contentSection[data-id='" + data.content + "']").attr(
+                                "data-completed", "True");
                             updateCompletedContentCount();
                         }
                     },
-                    failure: function (errMsg) { },
+                    failure: function (errMsg) {},
                 });
             };
 
@@ -1098,8 +1109,8 @@
                 }
 
                 if ("{{ enrollment.is_completed }}" == "True") {
-                   // var frm = new $.FindRatingManager({});
-                  // completedPopup();
+                    // var frm = new $.FindRatingManager({});
+                    // completedPopup();
                     return;
                 }
 
@@ -1120,12 +1131,12 @@
                     success: function (response, textStatus, xhr) {
                         Swal.close();
                         completedPopup();
-                       // var frm = new $.FindRatingManager({});
+                        // var frm = new $.FindRatingManager({});
                     },
                 });
             };
 
-            var completedPopup = function() {
+            var completedPopup = function () {
                 Swal.fire({
                     title: "<strong>Congratulation</strong>",
                     icon: "success",
@@ -1137,11 +1148,12 @@
                     focusConfirm: false,
                     confirmButtonText: `Download Certificate`,
                     cancelButtonText: `Close`,
-                  }).then((result) => {
+                }).then((result) => {
                     if (result.isConfirmed) {
-                     window.location.href = "{% url 'student_course_certificate' enrollment.course_id %}";
-                    } 
-                  });
+                        window.location.href =
+                            "{% url 'student_course_certificate' enrollment.course_id %}";
+                    }
+                });
             };
 
             var registerEvent = function () {
@@ -1157,7 +1169,7 @@
 
             var init = function () {
                 registerEvent();
-               // getTimeLog();
+                // getTimeLog();
                 checkContentCompleted();
             };
 
@@ -1179,8 +1191,7 @@
                 var cId = $("#fmChat input[name='conversation']").val();
 
                 $.get(
-                    "{% url 'api_v1:api_messages' %}",
-                    {
+                    "{% url 'api_v1:api_messages' %}", {
                         conversation: cId,
                         type: "last10",
                     },
@@ -1217,7 +1228,7 @@
 
                         Swal.close();
                     },
-                    failure: function (errMsg) { },
+                    failure: function (errMsg) {},
                 });
             };
 
@@ -1335,8 +1346,7 @@
 
                         var data = $("#fmRating").serializeObject();
 
-                        data = $.extend(
-                            {
+                        data = $.extend({
                                 key_name: key_name,
                                 key_value: key_value,
                                 student: "{{ request.user.id }}",
@@ -1373,9 +1383,10 @@
                         },
                         success: function (response) {
                             $("#ratingModal").modal("hide");
-                            Swal.fire("Thank you!", "You response has been recorded!", "success");
+                            Swal.fire("Thank you!", "You response has been recorded!",
+                                "success");
                         },
-                        failure: function (errMsg) { },
+                        failure: function (errMsg) {},
                     });
                 }
             };
@@ -1392,7 +1403,7 @@
                     $(this).closest("tr").eq(0).removeAttr("style");
                 });
 
-                $("#ratingModal").on("shown.bs.modal", function (e) { });
+                $("#ratingModal").on("shown.bs.modal", function (e) {});
             };
 
             var init = function () {
