--- a/app_business/templates/business_base.html
+++ b/app_business/templates/business_base.html
@@ -30,7 +30,32 @@
 
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Muli&family=Poppins:wght@400;600;700&family=Quicksand:wght@500;600;700&display=swa" />
-</head>
+
+          <!-- Begin Inspectlet Asynchronous Code -->
+          <script type="text/javascript">
+            (function () {
+               window.__insp = window.__insp || [];
+               __insp.push(["wid", 744994169]);
+               var ldinsp = function () {
+                  if (typeof window.__inspld != "undefined") return;
+                  window.__inspld = 1;
+                  var insp = document.createElement("script");
+                  insp.type = "text/javascript";
+                  insp.async = true;
+                  insp.id = "inspsync";
+                  insp.src =
+                     ("https:" == document.location.protocol ? "https" : "http") +
+                     "://cdn.inspectlet.com/inspectlet.js?wid=744994169&r=" +
+                     Math.floor(new Date().getTime() / 3600000);
+                  var x = document.getElementsByTagName("script")[0];
+                  x.parentNode.insertBefore(insp, x);
+               };
+               setTimeout(ldinsp, 0);
+            })();
+         </script>
+         <!-- End Inspectlet Asynchronous Code -->
+         
+  </head>
 
 <body id="top-header">
   <header style="background: #263b5e;">
