--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -49,7 +49,7 @@ Best Price Online Courses - {{ subject.title }} (Easy Access 24/7 On All Devices
     <div class="course-top-wrap">
         <div class="container">
 
-            {% if subject and subject.package_set.count > 0 %}
+            {% if subject and subject_packages %}
             
                 <div class="row">
                     <div class="col">
@@ -223,7 +223,7 @@ Best Price Online Courses - {{ subject.title }} (Easy Access 24/7 On All Devices
 </section>
 {% endif %}
 
-{% if subject and subject.package_set.count > 0 %}
+{% if subject and subject_packages %}
 <section class="team section-padding bg-grey mb-5">
     <div class="container">
         <div class="row align-items-center" id="bundles">
@@ -236,7 +236,7 @@ Best Price Online Courses - {{ subject.title }} (Easy Access 24/7 On All Devices
 
 
         <div class="row" >
-            {% for item in subject.package_set.all %}
+            {% for item in subject_packages %}
             <div class="col-md-6">
                 <div class="card border-0 mb-4 shadow">
                     <div class="card-header bg-primary">
