--- a/app_public/templates/faq/faq.html
+++ b/app_public/templates/faq/faq.html
@@ -79,12 +79,16 @@
                             </div>
                             <!-- end card -->
                            
-                            <!-- end card -->
-                          
-                            <!-- end card -->
-                            
-                            <!-- end card -->
-                           
+                            <div class="card mt-2" id="student-demo">
+                                <div class="card-header">
+                                    <strong>
+                                        How to take the course?
+                                    </strong>
+                                </div>
+                                <div class="card-body">
+                                    <div style="padding:53.13% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1035306202?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Pdhsafety - Student Dashboard"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+                                </div>
+                            </div>
                             <!-- end card -->
                         </div>
                     </div>
