--- a/app_students/templates/student_base.html
+++ b/app_students/templates/student_base.html
@@ -78,10 +78,13 @@
                         <li class="nav-item">
                            <a class="nav-link" href="{% url 'student_purchase_history' %}"> Purchase History </a>
                         </li>
-
                         <li class="nav-item">
-                           <a class="nav-link" href="{% url 'student_messages' %}"> Inbox </a>
+                           <a class="nav-link" target="_blank" href="{% url 'faq' %}#student-demo"> Demo </a>
                         </li>
+                       
+                        {% comment %} <li class="nav-item">
+                           <a class="nav-link" href="{% url 'student_messages' %}"> Inbox </a>
+                        </li> {% endcomment %}
 
                         <li class="nav-item">
                            <a class="nav-link" href="{% url 'student_edit_profile' %}"> Edit Profile </a>
