--- a/app_students/templates/student_home.html
+++ b/app_students/templates/student_home.html
@@ -22,7 +22,7 @@
             <div class="col-lg-12">
                 <section class="feature-3">
                     <div class="container">
-                        <div class="row no-gutters">
+                        <div class="row no-gutters mb-3">
                             <div class="col-lg-6 col-md-6">
                                 <div class="feature-item">
                                     <div class="feature-icon">
@@ -56,6 +56,13 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="row no-gutters">
+<div class="col-md-12">
+    <div class="bg-white p-3  text-center">
+<a  class="font-weight-bold" target="_blank" href="{% url 'faq' %}#student-demo">How to take course?<a/>
+    </div>
+</div>
                         </div>
                     </div>
                 </section>
