--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -245,13 +245,16 @@
                      <li class="nav-item">
                         <a title="Accoutn Dashboard" class="nav-link" href="{% url 'business_dashboard' %}" aria-label="Business"> My Dashboard </a>
                      </li>
-
+                     <li class="nav-item">
+                        <a title="Business Account Features" class="nav-link" href="{% url 'business_account_features' %}" aria-label="Business"> Business Features </a>
+                     </li>
                    {% else %}
                    <li class="nav-item">
                      <a title="Business Account Register" class="nav-link" href="{% url 'business_user_register' %}" aria-label="Business"> Business Account </a>
                   </li>
+                 
                      {% endif %}
-
+                   
                      <li class="nav-item">
                         <a title="Training Verification" class="nav-link" href="/sst-verify/"> Training Verification </a>
                      </li>
@@ -391,6 +394,10 @@
                      <li>
                         <a title="Training Verification" href="/sst-verify/">Training Verification</a>
                      </li>
+                     <li>
+                        <a title="Business Account Features" href="{% url 'business_account_features' %}" aria-label="Business"> Business Features </a>
+                     </li>
+
                   </ul>
                </div>
             </div>
